authenticated (userid not)

--- a/src/StackOverflowClone/project.json
+++ b/src/StackOverflowClone/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.1",
@@ -19,7 +19,8 @@
       "type": "build"
     },
     "System.Linq": "4.1.0",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0"
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+    "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.1"
   },
 
   "tools": {
